// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge Border 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <span
      class="badge outline svelte-18ypbna"
    >
      Badge
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Badge Theme 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style=""
  >
    <span
      class="badge dark svelte-18ypbna"
    >
      Badge
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Input Borders None 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="form-div input-style-primary svelte-170l5hf"
    >
      <input
        autocomplete="off"
        class="form-input border-Bottom svelte-170l5hf"
        max=""
        min=""
        name=""
        placeholder=" "
        step=""
        type="password"
      />
       
      <label
        class="form-label svelte-170l5hf"
        for=""
      >
        Senha
      </label>
       
      <div
        class="icon svelte-170l5hf"
      >
        <span
          class="icon-none"
        />
      </div>
       
      <p
        class="helper svelte-170l5hf"
      >
        
      </p>
       
      <p
        class="error svelte-170l5hf"
      >
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Input Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style=""
  >
    <div
      class="form-div input-style-primary svelte-170l5hf"
    >
      <input
        autocomplete="off"
        class="form-input border-Outline svelte-170l5hf"
        max=""
        min=""
        name=""
        placeholder=" "
        step=""
        type="email"
      />
       
      <label
        class="form-label svelte-170l5hf"
        for=""
      >
        Email
      </label>
       
      <div
        class="icon svelte-170l5hf"
      >
        <span
          class="icon-none"
        />
      </div>
       
      <p
        class="helper svelte-170l5hf"
      >
        Digite um email válido
      </p>
       
      <p
        class="error svelte-170l5hf"
      >
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Input Readonly 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="form-div input-style-primary svelte-170l5hf icons-right"
    >
      <input
        autocomplete="off"
        class="form-input border-Outline svelte-170l5hf"
        max=""
        min=""
        name=""
        placeholder=" "
        readonly=""
        step=""
        type="text"
      />
       
      <label
        class="form-label svelte-170l5hf"
        for=""
      >
        Aviso
      </label>
       
      <div
        class="icon svelte-170l5hf"
      >
        <span
          class="icon-info"
        />
      </div>
       
      <p
        class="helper svelte-170l5hf"
      >
        Apenas um exemplo
      </p>
       
      <p
        class="error svelte-170l5hf"
      >
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Input Whith Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="form-div input-style-primary svelte-170l5hf icons-right"
    >
      <input
        autocomplete="off"
        class="form-input border-Bottom svelte-170l5hf"
        max=""
        min=""
        name=""
        placeholder=" "
        step=""
        type="tel"
      />
       
      <label
        class="form-label svelte-170l5hf"
        for=""
      >
        Celular 1
      </label>
       
      <div
        class="icon svelte-170l5hf"
      >
        <span
          class="icon-phone"
        />
      </div>
       
      <p
        class="helper svelte-170l5hf"
      >
        
      </p>
       
      <p
        class="error svelte-170l5hf"
      >
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Input Whith Icon Left 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="form-div input-style-primary svelte-170l5hf icons-left"
    >
      <input
        autocomplete="off"
        class="form-input border-Outline svelte-170l5hf"
        max=""
        min=""
        name=""
        placeholder=" "
        step=""
        type="tel"
      />
       
      <label
        class="form-label svelte-170l5hf"
        for=""
      >
        Celular 2
      </label>
       
      <div
        class="icon svelte-170l5hf"
      >
        <span
          class="icon-phone"
        />
      </div>
       
      <p
        class="helper svelte-170l5hf"
      >
        
      </p>
       
      <p
        class="error svelte-170l5hf"
      >
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots External/SveltePdfViewer Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h1
    class="svelte-zftq3x"
  >
    Component package example.
  </h1>
   
  <br
    class="svelte-zftq3x"
  />
  <br
    class="svelte-zftq3x"
  />
   
  <h2
    class="svelte-zftq3x"
  >
    This component show your name from props:
  </h2>
   
  <p
    class="svelte-zftq3x"
  >
    Hi 
    
  </p>
   
  <br
    class="svelte-zftq3x"
  />
  <hr
    class="svelte-zftq3x"
  />
  <br
    class="svelte-zftq3x"
  />
   
  <h2
    class="svelte-zftq3x"
  >
    Use 2 internal componentes:
  </h2>
   
  <p
    class="svelte-zftq3x"
  >
    a 
    <button
      class="storybook-button storybook-button--medium storybook-button--primary svelte-wtisvu"
      data-testid="btn-visible"
      style=""
      type="button"
    >
      Button
    </button>
     
    <button
      class="svelte-wtisvu"
      data-testid="btn-hidden"
      id="btn-hidden"
    >
      hi
    </button>
  </p>
   
  <br
    class="svelte-zftq3x"
  />
   
  <p
    class="svelte-zftq3x"
  >
    and an icon
  
    <span
      class="icon-email-outline"
    />
  </p>
   
  <br
    class="svelte-zftq3x"
  />
  <hr
    class="svelte-zftq3x"
  />
  <br
    class="svelte-zftq3x"
  />
   
  <h2
    class="svelte-zftq3x"
  >
    And import an image too:
    <br
      class="svelte-zftq3x"
    />
     
    <img
      alt="my-img"
      class="svelte-zftq3x"
      height="150px"
      width="150px"
    />
    <br
      class="svelte-zftq3x"
    />
  </h2>
</section>
`;

exports[`Storyshots Internal/Button Inaccessible 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary svelte-wtisvu"
    data-testid="btn-visible"
    style="background-color: white"
    type="button"
  >
    Button
  </button>
   
  <button
    class="svelte-wtisvu"
    data-testid="btn-hidden"
    id="btn-hidden"
  >
    hi
  </button>
</section>
`;

exports[`Storyshots Internal/Button Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--large storybook-button--secondary svelte-wtisvu"
    data-testid="btn-visible"
    style=""
    type="button"
  >
    Button
  </button>
   
  <button
    class="svelte-wtisvu"
    data-testid="btn-hidden"
    id="btn-hidden"
  >
    hi
  </button>
</section>
`;

exports[`Storyshots Internal/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary svelte-wtisvu"
    data-testid="btn-visible"
    style=""
    type="button"
  >
    Button
  </button>
   
  <button
    class="svelte-wtisvu"
    data-testid="btn-hidden"
    id="btn-hidden"
  >
    hi
  </button>
</section>
`;

exports[`Storyshots Internal/Button Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary svelte-wtisvu"
    data-testid="btn-visible"
    style=""
    type="button"
  >
    Button
  </button>
   
  <button
    class="svelte-wtisvu"
    data-testid="btn-hidden"
    id="btn-hidden"
  >
    hi
  </button>
</section>
`;

exports[`Storyshots Internal/Button Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--small storybook-button--secondary svelte-wtisvu"
    data-testid="btn-visible"
    style=""
    type="button"
  >
    Button
  </button>
   
  <button
    class="svelte-wtisvu"
    data-testid="btn-hidden"
    id="btn-hidden"
  >
    hi
  </button>
</section>
`;

exports[`Storyshots Internal/Icon Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="icon-phone"
  />
</section>
`;
